src/main/java/com/example/demo/common/error/ErrorMessage.java
package com.example.demo.common.error;

public enum ErrorMessage {
    VALIDATION_FAILED, UNAUTHORIZED, CONFLICT
}
